Modificacion de CORS para permitir la conexion del socket